# machina_playlist

./: data.csv  manage.py  postupak  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py
catalog/templates/catalog/: albuminfo_list.html  bandinfo_list.html  catalog.html
playlist_archive/: asgi.py  settings.py  urls.py  views.py  wsgi.py
playlist_archive/templates/playlist_archive/: landing.html
