[tool.poetry]
name = "machina-playlist"
version = "0.1.0"
description = "Playlist database for Machina course"
authors = ["Tomislav Nazifović <tomislav.nazifovic@gmail.com>"]
readme = "README.md"
packages = [{include = "machina_playlist"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
